syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

import "google/protobuf/wrappers.proto";

message CreateAliasTransaction {
  bytes id = 1;
  bytes sender_public_key = 2;
  bytes alias = 3;
  int64 fee = 4;
  int64 timestamp = 5;
  google.protobuf.BytesValue fee_asset_id = 6;
  repeated bytes proofs = 7;
  bytes sender_address = 8;
}